# TraxisAccountingIngest

./: .gitignore  CLAUDE.md  Fusion_360_API_Reference.md  P15_SUMMARY_FOR_WEB_CLAUDE.md  PROSHOP_API_REFERENCE.md  TRAXIS_ECOSYSTEM.md  TRAXIS_QBO_AUTOMATION_ARCHITECTURE.md  main_session_log.md
12. FASData Implementation/TraxisTransfer/: .gitignore  CHANGELOG.md  README.md  machines.json  pyproject.toml  requirements-dev.txt  requirements.txt
12. FASData Implementation/TraxisTransfer/scripts/: build.bat  install.bat
12. FASData Implementation/TraxisTransfer/src/traxistransfer/: __init__.py  __main__.py  config.py  constants.py  main.py
12. FASData Implementation/TraxisTransfer/src/traxistransfer/drivers/: __init__.py  base.py  fanuc_focas.py  haas_chc_ssh.py  haas_ngc_smb.py  serial_dnc.py
12. FASData Implementation/TraxisTransfer/src/traxistransfer/focas/: __init__.py  errors.py  fwlib.py  structs.py
12. FASData Implementation/TraxisTransfer/src/traxistransfer/models/: machine.py  transfer.py
12. FASData Implementation/TraxisTransfer/src/traxistransfer/services/: audit_log.py  folder_resolver.py  proshop_client.py  status_checker.py  transfer_service.py
12. FASData Implementation/TraxisTransfer/src/traxistransfer/ui/: app_window.py  file_browser.py  last_sent_panel.py  log_viewer.py  machine_panel.py  program_browser.py  progress_bar.py  styles.py  transfer_dialog.py  wo_panel.py
12. FASData Implementation/TraxisTransfer/tests/: conftest.py  test_audit_log.py  test_focas_driver.py  test_focas_structs.py  test_folder_resolver.py  test_haas_driver.py
(+676 files in other folders)
